--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.2.32",
+    "@langchain/langgraph": "^0.2.2",
+    "@tremor/react": "^3.18.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "next": "14.2.9",
