--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.6",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@heroicons/react": "^2.1.5",
     "@langchain/core": "^0.2.32",
     "@langchain/langgraph": "^0.2.2",
+    "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.18.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
@@ -20,6 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -27,7 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   }
 }
