--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@langchain/core": "^0.2.32",
     "@langchain/langgraph": "^0.2.2",
+    "@langchain/openai": "^0.2.10",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.18.1",
     "axios": "^1.7.7",
