--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.4.5",
     "next": "14.2.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
