--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tremor/react": "^3.18.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.5.6",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
@@ -40,8 +41,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5",
-    "prettier": "^2.8.8"
+    "typescript": "^5"
   }
 }
