--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
